[package]
name = "psl-types"
description = "A native library for Mozilla's Public Suffix List"
version = "2.0.0-alpha.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/addr-rs/psl-types"
documentation = "https://docs.rs/psl-types"
readme = "README.md"
keywords = ["tld", "gtld", "cctld", "psl", "no_std"]
authors = ["rushmorem <rushmore@webenchanter.com>"]
edition = "2018"
